# modelforge-ml

./: .gitignore  Amazon_MLSS_SOP_MohammedYaseen.html  Dockerfile  README.md  docker-compose.yml  netlify.toml  pyproject.toml  requirements.txt  vercel.json
src/vectaflow/: app.py  simulator.py
src/vectaflow/algorithms/: elasticity_model.py  pricing_agent.py
src/vectaflow/static/: index.html
src/vectaflow/static/css/: styles.css
src/vectaflow/static/js/: app.js
tests/: test_api.py  test_pricing.py
