[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vectaflow"
version = "1.0.0"
description = "Vectaflow Enterprise Dynamic Pricing & Elasticity Engine"
authors = [
    { name = "Vectaflow Team" }
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20.0",
    "fastapi>=0.80.0",
    "uvicorn>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.20.0",
]

[tool.setuptools.packages.find]
where = ["src"]
